--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<script>alert("error 2569")</script>
+<!DOCTYPE html>
+<html>
+
+<body>
+
+    <p id="p"></p>
+
+    <script>
+        var r = prompt("?");
+        document.getElementById("p").innerHTML = r;
+    </script>
+
+</body>
+
+</html>
