--- a/index.html
+++ b/index.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<body>
-
-    <p id="p"></p>
-
-    <script>
-        var r = prompt("?");
-        document.getElementById("p").innerHTML = r;
-    </script>
-
-</body>
-
-</html>
+<script>alert('error 2569')</script>
